# lux

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.cpp  shaders.h
examples/include/: common.h
examples/mesh/: CMakeLists.txt  main.cpp  shaders.h
examples/scene_objects/: CMakeLists.txt  main.cpp
examples/window/: CMakeLists.txt  main.cpp
src/: data_types.hpp  global_uniforms.h  index_buffer.cpp  index_buffer.h  lux.h  material_definition.cpp  material_definition.h  memory.cpp  memory.h  mesh.h  program_state.h  render_pass.h  render_pass_queue.cpp  render_pass_queue.h  render_state.h  renderer.cpp  renderer.h  rendering_implementation.h  shader.h  vertex_buffer.cpp  vertex_buffer.h  vertex_structure.h
src/implementations/: opengl_implementation.cpp  opengl_implementation.h
src/tree/: node.cpp  node.h
